added gradient saliency map script

--- a/xai_perturbation_shap_method.ipynb
+++ b/xai_perturbation_shap_method.ipynb
@@ -15,7 +15,7 @@
    "id": "13038947-d6a4-463a-a4b8-03b4bdb0adcb",
    "metadata": {},
    "source": [
-    "## SHAP (SHapley Additive exPlanations) (Work in progress...)\n",
+    "## SHAP (SHapley Additive exPlanations) \n",
     "\n",
     "**Idea**: This method uses game‑theory to assign each feature (pixel, word, etc.) a fair “value” for its contribution to the final prediction."
    ]
@@ -291,78 +291,6 @@
     "# Visualize\n",
     "shap.summary_plot(shap_values, X_test, feature_names=feature_names)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb3cb8b0-db2d-42b4-88cf-7b97d3fb3fbc",
-   "metadata": {},
-   "source": [
-    "To explain a single prediction:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b95cc4d8-4b51-40e3-8cc1-ade887dc5062",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "059ab800-b832-4b22-ad8d-c245e2c96a68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58a2d90d-fcaa-4274-bb4c-6cbaa5027fc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56abcbe8-2e86-42a6-ab90-d16546139434",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aeb4bd21-b0aa-4bb3-b6ca-72c0c577882c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f8f66b2-d678-42cf-95c6-1bfb768831c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "174e03d7-e13d-4b83-a5da-385006286f2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61a99eea-1d89-4220-81c0-e180e78889fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
